--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ repository: dgvjay/dgvjay.github.io
 # so be sure to set them if your theme uses them.
 #
 title : Digvijay Singh
-tagline: Molecular Sociology through In situ structure, assembly and function
+tagline: Molecular Sociology through in situ structure, assembly and function
 institution:
   url: https://www.ucsd.edu
   name: University of California, San Diego
